# idea-radar

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily-push.yml
config/: spam_keywords.txt
data/: config.json
prompts/: scorer.txt
src/: main.py  models.py  orchestrator.py
src/notifiers/: base.py  email_notifier.py
src/processors/: __init__.py  deduplicator.py  scorer.py  spam_filter.py
src/scrapers/: __init__.py  base.py  reddit.py  rss.py  zhihu.py
templates/: email.html
